@@ -122,6 +122,9 @@ $codestriker_css = '';
      # semicolons.
      'svn:http://svn.collab.net/repos/svn/trunk;username;password',
 
+     # Subversion server that uses the Subversion protocol.
+     'svn://my.subversion.server/repos/product/trunk',
+
      # Example CVS pserver config with username and password
      # specified.
      ':pserver:sits:password@cvs.sourceforge.net:/cvsroot',
@@ -184,6 +187,8 @@ $codestriker_css = '';
      # view is loaded.
      # 'clearcase:dyn:viewname:/vobs'
     );
+
+@valid_repositories = ();
 
 # A mapping of repository URLs to names.  In any screen where a
 # repository is displayed, if there is a mapping for the repository
