@@ -488,6 +488,9 @@ $use_compression = 0;
      # semicolons.
      'svn:http://svn.collab.net/repos/svn/trunk;username;password',
 
+     # Subversion server that uses the Subversion protocol.
+     'svn://my.subversion.server/repos/product/trunk',
+
      # Example CVS pserver config with username and password
      # specified.
      ':pserver:sits:password@cvs.sourceforge.net:/cvsroot',
